# tropxeskoob

./: .devenv.flake.nix  .envrc  CONTRIBUTING.md  Cargo.toml  GET_TOKEN.en-US.md  GET_TOKEN.pt-BR.md  LICENSE-MIT  README.md  README.pt-BR.md  devenv.nix  flake.nix
.devenv/: bash  devenv.json  flake.json  input-paths.txt  nix-eval-cache.db  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run  tasks.db  tasks.db-shm  tasks.db-wal
.devenv/gc/: shell-1-link
.github/workflows/: ci.yml  release.yml
src/: auth.rs  client.rs  exporter.rs  main.rs  models.rs
