[package]
name = "tropxeskoob"
version = "0.1.0"
edition = "2024"
description = "Export your Skoob bookshelf to JSON and CSV"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pedrobrantes/tropxeskoob"
readme = "README.md"
keywords = ["skoob", "export", "bookshelf", "json", "csv"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
reqwest = { version = "0.13.2", features = ["json", "blocking", "query"] }
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
